--- a/App/index.html
+++ b/App/index.html
@@ -4,29 +4,23 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
 	<link rel=stylesheet" type="text/css" href="css/main.css"></link>
+	<link rel=stylesheet" type="text/css" href="css/spin.css"></link>
 	<script language="javascript" type="text/javascript" src="js/p5.js"></script>
 	<script language="javascript" type="text/javascript" src="js/sketch.js"></script>
 	<script language="javascript" type="text/javascript" src="js/helpers.js"></script>
+	<script language="javascript" type="text/javascript" src="js/onLoad.js"></script>
 	<style>#background-sketch {
 	  position: absolute;
 	  top:0px;
 	  left:0px;
 	  z-index: -2;
 	}</style>
-	<script type="text/javascript">
-		window.onload = function() {
-			var startLink = document.getElementById("start");
-			console.log("Trying GET to 192.168.4.1");
-			var macGet = getBackoff("http://192.168.4.1/i?", 10, 100, function(result){
-				console.log("We got:", result);
-			});
-			startLink.onclick = function(){
-							}
-		}
-	</script>
   </head>
   <body>
 	  <div id = "background-sketch"></div>
-	  <p>Connect to your ESP8266's Access Point, then click <a id="start" href="http://192.168.4.1/wifi?">here</a> to begin</p>
+	  <img class="loadingIcon" src="assets/Animations/spin.svg"/>
+	  <p>Looking for your ESP8266... Please wait.</p>
+	  <button type="button" id="verifyButton">Searching</button>
+<a id="start" href="http://192.168.4.1/wifi?">here</a>
   </body>
 </html>
