Finished button/status message logic

--- a/App/index.html
+++ b/App/index.html
@@ -19,7 +19,7 @@
   <body>
 	  <div id = "background-sketch"></div>
 	  <img class="loadingIcon" src="assets/Animations/spin.svg"/>
-	  <p>Looking for your ESP8266... Please wait.</p>
+	  <p id="statusText">Looking for your ESP8266... Please wait.</p>
 	  <button type="button" id="verifyButton">Searching</button>
 <a id="start" href="http://192.168.4.1/wifi?">here</a>
   </body>
